--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "chart.js": "^3.8.0",
+    "firebase": "^9.8.4",
     "ng2-charts": "^3.0.11",
     "primeng": "^13.4.1",
     "rxjs": "~7.5.0",
