--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.8.4",
     "ng2-charts": "^4.0.0",
     "primeng": "^14.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
