--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.1.0",
     "firebase": "^9.8.4",
     "ng2-charts": "^4.0.0",
+    "ngx-papaparse": "^5.1.0",
     "primeng": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
