--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "firebase": "^9.8.4",
+    "moment": "^2.29.4",
     "ng2-charts": "^4.0.0",
     "ngx-papaparse": "^5.1.0",
+    "ngx-quill": "^18.0.0",
     "primeng": "^14.0.0",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
