--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "angular-moment": "^1.3.0",
     "firebase": "^9.8.4",
     "moment": "^2.29.4",
     "ng2-charts": "^4.0.0",
