--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "convert-csv-to-json": "^1.3.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "twilio": "^3.81.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
