--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^9.8.4",
     "moment": "^2.29.4",
     "ng2-charts": "^4.0.0",
+    "ngx-file-drop": "^13.0.0",
     "ngx-papaparse": "^5.1.0",
     "ngx-quill": "^18.0.0",
     "primeng": "^14.0.0",
@@ -34,6 +35,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "twilio-client": "^1.14.0",
+    "util": "^0.12.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
